# meem

./: README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/dev/klier/meem/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/klier/meem/: DatabaseViewModel.kt  FirstFragment.kt  GalleryAdapter.kt  MainActivity.kt  SecondFragment.kt  SetupGalleryFragment.kt  SetupImportFragment.kt  SetupOperationModeFragment.kt  SetupPermissionFragment.kt
android/app/src/main/java/dev/klier/meem/manager/: DeviceImageManager.kt  IndexManager.kt  OnPhoneImagesObtained.kt
android/app/src/main/java/dev/klier/meem/models/: Album.kt  Media.kt  (+5 more)
android/app/src/main/res/layout/: activity_main.xml  activity_setup_permission.xml  activity_startup.xml  fragment_memes.xml  fragment_setup_gallery.xml  fragment_setup_import.xml  fragment_setup_operation_mode.xml  fragment_setup_permission.xml  fragment_sort.xml  gallery_item.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml  nav_graph2.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-de-rDE/: strings.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/values-v29/: themes.xml
android/app/src/test/java/dev/klier/meem/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
backend/: Cargo.toml
backend/migrations/2023-02-13-192155_create_user/: up.sql
backend/src/: main.rs  models.rs  schema.rs
(+11 files in other folders)
