[package]
name = "meem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0.0", features = ["mysql"] }
dotenvy = "0.15"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-argon2 = "1.0"
chrono = "0.4.23"